@@ -909,7 +909,7 @@ let rec start_parser_of_levels entry clevn =
       | tree ->
           let alevn =
             match lev.assoc with
-              LeftA | NonA -> if levs = [] then clevn else succ clevn
+              LeftA | NonA -> succ clevn
             | RightA -> clevn
           in
           let p2 = parser_of_tree entry (succ clevn) alevn tree in
@@ -953,7 +953,7 @@ let rec continue_parser_of_levels entry clevn =
       | tree ->
           let alevn =
             match lev.assoc with
-              LeftA | NonA -> if levs = [] then clevn else succ clevn
+              LeftA | NonA -> succ clevn
             | RightA -> clevn
           in
           let p2 = parser_of_tree entry (succ clevn) alevn tree in
@@ -1465,7 +1465,7 @@ let rec fstart_parser_of_levels entry clevn =
       | tree ->
           let alevn =
             match lev.assoc with
-              LeftA | NonA -> if levs = [] then clevn else succ clevn
+              LeftA | NonA -> succ clevn
             | RightA -> clevn
           in
           let p2 = fparser_of_tree entry (succ clevn) alevn tree in
@@ -1518,7 +1518,7 @@ let rec fcontinue_parser_of_levels entry clevn =
       | tree ->
           let alevn =
             match lev.assoc with
-              LeftA | NonA -> if levs = [] then clevn else succ clevn
+              LeftA | NonA -> succ clevn
             | RightA -> clevn
           in
           let p2 = fparser_of_tree entry (succ clevn) alevn tree in
@@ -1952,7 +1952,7 @@ let rec bstart_parser_of_levels entry clevn =
       | tree ->
           let alevn =
             match lev.assoc with
-              LeftA | NonA -> if levs = [] then clevn else succ clevn
+              LeftA | NonA -> succ clevn
             | RightA -> clevn
           in
           let p2 = bparser_of_tree entry (succ clevn) alevn tree in
@@ -2012,7 +2012,7 @@ let rec bcontinue_parser_of_levels entry clevn =
       | tree ->
           let alevn =
             match lev.assoc with
-              LeftA | NonA -> if levs = [] then clevn else succ clevn
+              LeftA | NonA -> succ clevn
             | RightA -> clevn
           in
           let p2 = bparser_of_tree entry (succ clevn) alevn tree in
